--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,3 +61,7 @@
 .input-error {
     @apply border-red-500
 }
+
+.link {
+    @apply text-indigo-600 underline underline-offset-4 hover:underline-offset-2 hover:text-indigo-400
+}
